[package]
name = "relay"
version = "1.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
futures-timer = "3.0.3"
futures = "0.3.31"
tokio = { version = "1.46.1", features = ["full"] }
libp2p = { version = "0.54.0", features = ["full"] }
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
base64 = "0.22.1"
anyhow = "1.0.98"